RESOLVED FIXED21373
[Gtk] Linux/Gtk: Acid3 test crashes GtkLauncher
https://bugs.webkit.org/show_bug.cgi?id=21373
Summary [Gtk] Linux/Gtk: Acid3 test crashes GtkLauncher
Clemmitt Sigler
Reported 2008-10-04 14:51:11 PDT
Hi, Testing trunk revisions since early 4 Oct, up through r37293 --> Acid3 crashes GtkLauncher with this short error output: pure virtual method called terminate called without an active exception Aborted (BTW, after Alp's patch found at Bug 20924, Acid2 succeeds.) HTH. Clemmitt
Attachments
Patch (1.04 KB, patch)
2008-10-04 17:51 PDT, Dave Hyatt
mrowe: review+
Mark Rowe (bdash)
Comment 1 2008-10-04 15:47:16 PDT
Can you please provide a backtrace?
Adrien Nader
Comment 2 2008-10-04 17:20:22 PDT
Backtrace : [New Thread 0x760b66d0 (LWP 5075)] Program received signal SIGABRT, Aborted. [Switching to Thread 0x760b66d0 (LWP 5075)] 0x76123c66 in raise () from /lib/libc.so.6 (gdb) bt #0 0x76123c66 in raise () from /lib/libc.so.6 #1 0x76125571 in abort () from /lib/libc.so.6 #2 0x76b32340 in __gnu_cxx::__verbose_terminate_handler () from /usr/lib/libstdc++.so.6 #3 0x76b2fbe5 in ?? () from /usr/lib/libstdc++.so.6 #4 0x76b2fc22 in std::terminate () from /usr/lib/libstdc++.so.6 #5 0x76b304c5 in __cxa_pure_virtual () from /usr/lib/libstdc++.so.6 #6 0x082e5172 in WebCore::ScrollView::platformRemoveChild () #7 0x081c1453 in WebCore::ScrollView::removeChild () #8 0x081c1ca1 in WebCore::ScrollView::setHasVerticalScrollbar () #9 0x081c1d71 in WebCore::ScrollView::~ScrollView () #10 0x081a4676 in WebCore::FrameView::~FrameView () #11 0x08265724 in WebCore::RenderWidget::setWidget () #12 0x0824119a in WebCore::RenderPart::setWidget () #13 0x083df758 in WebKit::FrameLoaderClient::transitionToCommittedForNewPage () #14 0x08163605 in WebCore::FrameLoader::transitionToCommitted () #15 0x08164008 in WebCore::FrameLoader::commitProvisionalLoad () #16 0x084a4be3 in WebCore::DocumentLoader::commitIfReady () #17 0x084a4c42 in WebCore::DocumentLoader::commitLoad () #18 0x084b6dd9 in WebCore::ResourceLoader::didReceiveData () #19 0x084b2aa5 in WebCore::MainResourceLoader::didReceiveData () #20 0x084b6b64 in WebCore::ResourceLoader::didReceiveData () #21 0x0828aed3 in WebCore::writeCallback () #22 0x77dc7312 in Curl_client_write (conn=0x8982bf0, type=<value optimized out>, ptr=0x898bfe1 "\211PNG\r\n\032\n", len=260) at sendf.c:473 #23 0x77ddb608 in Curl_readwrite (conn=0x8982bf0, done=0x7fea8c87) at transfer.c:1372 #24 0x77ddfc2e in multi_runsingle (multi=0x883a388, easy=0x89694d8) at multi.c:1250 #25 0x77de02d9 in curl_multi_perform (multi_handle=0x883a388, running_handles=0x7fea8eb4) at multi.c:1460 #26 0x0828bae0 in WebCore::ResourceHandleManager::downloadTimerCallback () #27 0x0828c929 in WebCore::Timer<WebCore::ResourceHandleManager>::fired () #28 0x081bf276 in WebCore::TimerBase::fireTimers () #29 0x081bf519 in WebCore::TimerBase::sharedTimerFired () #30 0x082e61b1 in WebCore::timeout_cb () #31 0x762723e6 in ?? () from /usr/lib/libglib-2.0.so.0 #32 0x00000000 in ?? () gmail in its usual UI dies with the same error (maybe not the same backtrace though).
Dave Hyatt
Comment 3 2008-10-04 17:51:29 PDT
Mark Rowe (bdash)
Comment 4 2008-10-04 17:54:10 PDT
Comment on attachment 24096 [details] Patch r=me
Dave Hyatt
Comment 5 2008-10-04 17:55:17 PDT
Fixed in r37306.
Note You need to log in before you can comment on or make changes to this bug.