2008-10-04  David Hyatt  <hyatt@apple.com>

https://bugs.webkit.org/show_bug.cgi?id=21373

        Tear down scrollbars in FrameView rather than ScrollView so that the connection to the hostWindow()
        is still present.

        Reviewed by Mark Rowe

        * page/FrameView.cpp:
        (WebCore::FrameView::~FrameView):



Canonical link: https://commits.webkit.org/29563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37306 268f45cc-cd09-0410-ab3c-d52691b4dbfc